--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="api_key">a2ad4268d92eb984f96945ddfda011ca</string>
     <string name="trailers">Trailers</string>
     <string name="reviews">Reviews</string>
+    <string name="trailer_text">"Trailer "</string>
 </resources>
